test/analyze/type_check/match/expression.exp
Error: Expected type `String` but found `Int`
test/analyze/type_check/match/expression.myte:14:11
 14 |     | 2 -> 2
    |            ^

Error: Expected type `String` but found `Unit`
test/analyze/type_check/match/expression.myte:15:11-13
 15 |     | _ -> ()
    |            ^^

Error: Expected type `Unit` but found `String`
test/analyze/type_check/match/expression.myte:20:11-14
 20 |     | 2 -> "a"
    |            ^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/expression.myte:30:11-33:5
 30 | /     | 2 -> {
    | |            ^
 31 | |       // Failure
    | | ^^^^^^^^^^^^^^^^
 32 | |       2;
    | | ^^^^^^^^
 33 | |     }
    | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/expression.myte:38:13-41:7
 38 | /       } else {
    | |              ^
 39 | |         // Failure
    | | ^^^^^^^^^^^^^^^^^^
 40 | |         1;
    | | ^^^^^^^^^^
 41 | |       }
    | \ ^^^^^^^^