test/analyze/type_check/match/expression.myte
module test

// Success - all cases have same type
fun testSuccess(): Int = match (1) {
  | 1 -> 1
  | 2 -> 2
  | _ -> 3
}

// Match expression inferred to have type of first case
fun testMismatchedExpressions() {
  val x = match (1) {
    | 1 -> "a"
    | 2 -> 2
    | _ -> ()
  };

  val x = match (1) {
    | 1 -> while (true) {}
    | 2 -> "a"
  };
}

fun testBlockExpression() {
  val x: Int = match (1) {
    | 1 -> {
      // Success
      1
    }
    | 2 -> {
      // Failure
      2;
    }
    | 3 -> {
      if (true) {
        // Success
        1
      } else {
        // Failure
        1;
      }
    }
  };
}

fun main() {}